--- a/circle.yml
+++ b/circle.yml
@@ -10,3 +10,14 @@ checkout:
   post:
     # - git submodule init
     # - git submodule update
+
+disabled_rules:
+  -file_length
+
+
+file_length:
+warning: 7
+error: 1500
+
+line_length:
+warning: 150
