--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,4 @@ jobs:
     working_directory: ~/.
     steps:
       - run: echo "This is pipeline ID << pipeline.id >>"
+      cd ../; git clone https://github.com/cpputest/cpputest.git; cd cpputest; ./autogen.sh; ./configure; make; sudo make install;
