--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,4 @@ jobs:
     working_directory: ~/.
     steps:
       - run: git clone https://github.com/cpputest/cpputest.git; cd cpputest; ./autogen.sh; ./configure; make; sudo make install;
-    test: ./testCircleCi -c
+      - test: make; ./testCircleCi -c
