--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,8 @@ jobs:
       IMAGETAG: latest
     working_directory: ~/.
     steps:
-      - run: git clone https://github.com/cpputest/cpputest.git; cd cpputest; ./autogen.sh; ./configure; make; sudo make install; pwd; ls; cd ..; ls
+      - run: git clone https://github.com/cpputest/cpputest.git; cd cpputest; ./autogen.sh; ./configure; make; sudo make install; cd ../testCircleCi; make && make test
       
+
+
+
